--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
   </header>
 
   <div class="overlay setup hidden">
-    <form class="setup-wizard-form" method="post" action="https://js.dump.academy/code-and-magick" enctype="multipart/form-data" autocomplete="off">
+    <form class="setup-wizard-form" method="post" action="https://js.dump.academy/code-and-magick"
+      enctype="multipart/form-data" autocomplete="off">
 
       <div class="setup-title">
         <div class="setup-user">
@@ -77,7 +78,8 @@
             <input type="file" name="avatar">
           </div>
           <label>
-            <input type="text" name="username" minlength="2" maxlength="25" required class="setup-user-name" value="Синий Пендальф" />
+            <input type="text" name="username" minlength="2" maxlength="25" required class="setup-user-name"
+              value="Синий Пендальф" />
           </label>
         </div>
 
@@ -198,8 +200,10 @@
     }
   </script>
   <script src="js/game.js"></script>
+  <script src="js/util.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/setup.js"></script>
+  <script src="js/dialog.js"></script>
 
 </body>
 
