Учебный проект: выкладываем фото

--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
   <script src="js/render.js"></script>
   <script src="js/character.js"></script>
   <script src="js/similar.js"></script>
+  <script src="js/avatar.js"></script>
 
 </body>
 
